ex1.12_todos/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos
  template:
    metadata:
      labels:
        app: todos
    spec:
      containers:
        - name: todos-be
          image: usb9/todos-be:ver1.12
