ex1.12_todos/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-be-svc
spec:
  type: ClusterIP
  selector:
    app: todos
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 5000
